Added about page

--- a/about/index.html
+++ b/about/index.html
@@ -2,5 +2,5 @@
 layout: default
 ---
             <h2>About</h2>
-            <p>About page</p>
+            <p>I'm a professor of economics. I'm messing around with blogging options in my leisure time. You can visit <a href="https://lancebachmeier.com">my professional site here</a> if that's what you're after.</p>
 </div>
