Update my about page

--- a/about/index.html
+++ b/about/index.html
@@ -1,6 +1,11 @@
 ---
 layout: default
 ---
-            <h2>About</h2>
-            <p>I'm a professor of economics. Sometimes I mess around with blogging setups. Sometimes I use them to blog. You can visit <a href="https://lancebachmeier.com">my professional site</a> if that's what you're after.</p>
+<h2>About</h2>
+<p>I'm a professor of economics. Sometimes I mess around with blogging setups. Sometimes I use them to blog. 
+You can visit <a href="https://lancebachmeier.com">my professional site</a> if that's what you're after.</p>
+<p>Some things that interest me: High-functionality, low-polish tools I can use to automate work. Programming. The 
+challenge of finding the lowest-effort way to do something. Learning about a lot of things. 
+Computational economics and econometrics. 
+</p>
 </div>
